tests/js_error/source_locations/statement/for_in/new_for_in_iterator.exp
Error: 
  ┌ tests/js_error/source_locations/statement/for_in/new_for_in_iterator.js:3:11
  |
3 |     throw new Error()
  |           ^
Stack trace:
  at ownKeys (tests/js_error/source_locations/statement/for_in/new_for_in_iterator.js:3:11)
  at <global> (tests/js_error/source_locations/statement/for_in/new_for_in_iterator.js:7:15)