tests/js_error/source_locations/statement/for_in/new_for_in_iterator.js
var poisoned = new Proxy({}, {
  ownKeys() {
    throw new Error()
  }
});

for (var x in poisoned) {}